WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206293
[LFC][IFC] ContinuousContent should not need a copy of RunList
https://bugs.webkit.org/show_bug.cgi?id=206293
Summary
[LFC][IFC] ContinuousContent should not need a copy of RunList
alan
Reported
2020-01-15 09:20:07 PST
ssia
Attachments
Patch
(1.36 KB, patch)
2020-01-15 09:23 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-01-15 09:20:26 PST
<
rdar://problem/58607446
>
alan
Comment 2
2020-01-15 09:23:18 PST
Created
attachment 387793
[details]
Patch
WebKit Commit Bot
Comment 3
2020-01-15 10:48:23 PST
The commit-queue encountered the following flaky tests while processing
attachment 387793
[details]
: editing/spelling/spellcheck-attribute.html
bug 206178
(authors:
g.czajkowski@samsung.com
,
mark.lam@apple.com
, and
rniwa@webkit.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4
2020-01-15 10:48:45 PST
The commit-queue encountered the following flaky tests while processing
attachment 387793
[details]
: editing/spelling/spellcheck-async-remove-frame.html
bug 158401
(authors:
morrita@google.com
,
rniwa@webkit.org
, and
tony@chromium.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5
2020-01-15 12:42:38 PST
Comment on
attachment 387793
[details]
Patch Clearing flags on attachment: 387793 Committed
r254629
: <
https://trac.webkit.org/changeset/254629
>
WebKit Commit Bot
Comment 6
2020-01-15 12:42:40 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug