[LFC][IFC] ContinuousContent should not need a copy of RunList https://bugs.webkit.org/show_bug.cgi?id=206293 <rdar://problem/58607446>

Reviewed by Antti Koivisto.

~4% progression on PerformanceTests/Layout/line-layout-simple.html.

* layout/inlineformatting/InlineLineBreaker.cpp:


Canonical link: https://commits.webkit.org/219393@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254629 268f45cc-cd09-0410-ab3c-d52691b4dbfc